[package]
name = "pantin"
version = "0.1.0"
authors = ["taylor <taylor@jennifersoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
unicode-width="0.1.7"
tokio = {version = "0.2", features = ["full"]}
